UC#2 Header actions

--- a/src/force-app/main/default/lwc/accountOrders/accountOrders.html
+++ b/src/force-app/main/default/lwc/accountOrders/accountOrders.html
@@ -19,7 +19,8 @@
                                     class="slds-m-left_x-small"
                                     onclick={refreshView}></lightning-button>
             </lightning-quick-action-panel>
-            <table class="slds-table slds-table_bordered slds-table_fixed-layout">
+            <table class="slds-table slds-table_bordered slds-table_fixed-layout"
+                    aria-label="Account orders">
                 <thead>
                     <tr>
                         <th></th>
