--- a/src/force-app/main/default/lwc/ordersDataTable/customCheckboxTemplate.html
+++ b/src/force-app/main/default/lwc/ordersDataTable/customCheckboxTemplate.html
@@ -1,4 +1,5 @@
 <template>
+    <p>ODT Debug Row ID: {debugRowId}</p>
     <c-custom-checkbox 
         is-selected={value} 
         row-id={rowId}
