--- a/src/force-app/main/default/lwc/customCheckbox/customCheckbox.html
+++ b/src/force-app/main/default/lwc/customCheckbox/customCheckbox.html
@@ -1,3 +1,3 @@
 <template>
-    <input type="checkbox" checked={isSelected} onchange={handleCheckboxChange}>
+    <input type="checkbox" row-id={rowId} checked={isSelected} onchange={handleCheckboxChange}>
 </template>
