--- a/src/force-app/main/default/lwc/ordersList/ordersList.html
+++ b/src/force-app/main/default/lwc/ordersList/ordersList.html
@@ -3,5 +3,6 @@
         data={ordersData}
         key-field="id"
         columns={ordersColumns}
+        onrowaction={handleRowAction}
     ></lightning-datatable>
 </template>
