--- a/src/force-app/main/default/lwc/ordersList/ordersList.html
+++ b/src/force-app/main/default/lwc/ordersList/ordersList.html
@@ -1,8 +1,8 @@
 <template>    
-    <lightning-datatable 
+    <c-orders-list-datatable 
         data={ordersData}
         key-field="id"
         columns={ordersColumns}
         onrowaction={handleRowAction}
-    ></lightning-datatable>
+    ></c-orders-list-datatable>
 </template>
